vind-demo-cluster/eso-cluster-store.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eso
